--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 .DS_Store
 node_modules
-/dist
-
+dist
+dist-ssr
 
 # local env files
+.env
 .env.local
 .env.*.local
 
@@ -15,6 +16,7 @@ pnpm-debug.log*
 
 # Editor directories and files
 .idea
+# .vscode
 *.suo
 *.ntvs*
 *.njsproj
