--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
     "lint:fix": "eslint --ext .ts,.js,.vue ./ --fix"
   },
   "dependencies": {
-    "vue": "^3.2.6",
-    "vuedraggable": "^4.1.0",
-    "vuex": "^4.0.2"
+    "vue": "3.2.6",
+    "vuedraggable": "4.1.0",
+    "vuex": "4.0.2"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.16.0",
-    "@vitejs/plugin-vue": "^1.6.1",
-    "@vue/compiler-sfc": "^3.2.6",
-    "eslint": "^8.2.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "prettier": "^2.3.2",
-    "sass": "^1.35.1",
-    "sass-loader": "^12.1.0",
-    "vite": "^2.5.4"
+    "@babel/eslint-parser": "7.16.3",
+    "@vitejs/plugin-vue": "1.10.0",
+    "@vue/compiler-sfc": "3.2.22",
+    "eslint": "8.3.0",
+    "eslint-plugin-vue": "8.1.1",
+    "prettier": "2.4.1",
+    "sass": "1.43.4",
+    "sass-loader": "12.3.0",
+    "vite": "2.6.14"
   }
 }
