--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "eslint --ext .ts,.js,.vue ./",
     "lint:fix": "eslint --ext .ts,.js,.vue ./ --fix"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rodrigodagostino/vue-todo-app"
+  },
+  "author": "Rodrigo D’Agostino <rodrigo.dagostino@protonmail.com> (https://www.rodrigodagostino.com/)",
+  "license": "MIT",
   "dependencies": {
     "vue": "3.2.6",
     "vuedraggable": "4.1.0"
