--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,10 +9,7 @@
   "editor.tabSize": 2,
   "files.eol": "\n",
   "eslint.alwaysShowStatus": true,
-  "eslint.lintTask.enable": true,
-  "eslint.validate": ["javascript", "vue"],
   "eslint.format.enable": true,
-  "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+  "eslint.lintTask.enable": true,
+  "eslint.validate": ["javascript", "vue"]
 }
