--- a/package.json
+++ b/package.json
@@ -16,18 +16,20 @@
   "author": "Rodrigo D’Agostino <rodrigo.dagostino@protonmail.com> (https://www.rodrigodagostino.com/)",
   "license": "MIT",
   "dependencies": {
-    "vue": "3.2.26",
+    "vue": "3.2.37",
     "vuedraggable": "4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "7.16.5",
-    "@babel/eslint-parser": "7.16.5",
-    "@vitejs/plugin-vue": "2.0.1",
-    "eslint": "8.5.0",
-    "eslint-plugin-vue": "8.2.0",
-    "prettier": "2.5.1",
-    "sass": "1.45.1",
-    "sass-loader": "12.4.0",
-    "vite": "2.7.6"
+    "@babel/core": "7.18.10",
+    "@babel/eslint-parser": "7.18.9",
+    "@vitejs/plugin-vue": "3.0.3",
+    "eslint": "8.22.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-vue": "9.3.0",
+    "prettier": "^2.7.1",
+    "sass": "1.54.4",
+    "sass-loader": "13.0.2",
+    "vite": "3.0.7"
   }
 }
