--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "vue": "3.2.37",
-    "vuedraggable": "4.1.0"
+    "vue-draggable-plus": "0.2.6"
   },
   "devDependencies": {
     "@babel/core": "7.18.10",
